--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="./favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="Content-Security-Policy" content="script-src 'self'" />
+		<meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 		<title>work-template</title>
-		<script type="module" crossorigin src="./assets/js/index-Dnp2XMtN.js"></script>
+		<script type="module" crossorigin src="./assets/js/index-BFi_M7Aj.js"></script>
 		<link rel="modulepreload" crossorigin href="./assets/js/vendor-DH3m-RmB.js">
 		<link rel="stylesheet" crossorigin href="./assets/css/vendor-COb6GfUT.css">
 		<link rel="stylesheet" crossorigin href="./assets/css/index-BsAlWqM1.css">
